// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-0:active:not(:disabled) {
  background-color: #6EB2F2;
}

.emotion-0:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with borderRadius 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  color: #0A68C1;
  border-radius: 100vw;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-0:active:not(:disabled) {
  background-color: #6EB2F2;
}

.emotion-0:disabled {
  color: #9c9c9c;
  background-color: transparent;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #00ff00;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with disabled and loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #9c9c9c;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF0000;
  color: #9c9c9c;
}

.emotion-0 svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with loading and current state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary with loading state 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #ffff00;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary without background-color styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:disabled {
  color: #9c9c9c;
}

.emotion-0:disabled svg {
  fill: #9c9c9c;
  color: #9c9c9c;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme iconButtonMinimalPrimary without disabled state styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: transparent;
  color: #0A68C1;
}

.emotion-0 svg {
  fill: #0A68C1;
  color: #0A68C1;
}

.emotion-0:hover:not(:disabled) {
  background-color: #e6f4ff;
}

.emotion-0:active:not(:disabled) {
  background-color: #6EB2F2;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`Surface Helper getStylePresetFromTheme with override to interactive040 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #FF00FF;
}

<div
    class="emotion-0"
  />
</DocumentFragment>
`;
